<resources>
    <string name="app_name">Toronto Parking</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="nav__title_home">Home</string>
    <string name="nav__title_add_ticket">Add Ticket</string>
    <string name="nav__title_location">Location</string>
    <string name="nav__title_instruction">Instruction</string>
    <string name="settings">Settings</string>
    <string name="nav__title_contact">Contact</string>
    <string name="nav__title_report">Report</string>
    <string name="nav__title_logout">Logout</string>
    <string name="today_s_total">TODAY\'S TOTAL</string>
    <string name="toronto_parking_system">Toronto Parking system</string>
    <string name="vahical_name">Vehicle Name</string>
    <string name="vehicle_brand">Vehicle brand</string>
    <string name="color">Color</string>
    <string name="title_activity_maps">Map</string>
</resources>
